Update QM method, SOP & POS conversion with Tkinter.ipynb

--- a/QM method, SOP & POS conversion with Tkinter.ipynb
+++ b/QM method, SOP & POS conversion with Tkinter.ipynb
@@ -5,7 +5,7 @@
    "id": "f17b6a94",
    "metadata": {},
    "source": [
-    "<h1>DIGITAL ELECTRONICS ASSIGNMENT</h1>"
+    "<h1>DIGITAL ELECTRONICS</h1>"
    ]
   },
   {
